# ai-fun

./: .cursorrules  .env  .gitignore  BULK_SOFT_DELETE_CHECKLIST.md  DOCKER_WARNING.md  README_DB.md  REFACTORING_PLAN.md  ai_config.json  cursor_api_client.py  docker-compose.yml  pyproject.toml  start-backend.sh  start-frontend.sh
.sisyphus/drafts/: better-wbw_plan.md
Other/: .git-commit-ai  ai_gemini.py  pyproject.toml
Other/ai_free_inputs/: data_processor.py  math_utils.py  web_scraper.py
Other/ai_project.egg-info/: PKG-INFO
ai_project.egg-info/: SOURCES.txt  requires.txt  top_level.txt
backend/: .env.example  app.py  bank_parser.py  category_classifier.py  models.py  ocr.py  requirements.txt  storage.py  tikkie_service.py
backend/migrations/versions/: 31e2876013dd_extend_trip_model_with_activity_features.py  37002722bd45_add_time_field_to_transactions.py  4a5b6c7d8e9f_add_deleted_at_to_transactions.py  5b6c7d8e9f0a_add_deleted_at_to_settlement_sessions.py  6c7d8e9f0a1b_add_category_to_transactions.py  6c7d8e9f0a1b_add_payment_requests_table.py  (+1 more)
backend/scripts/: reseed_simple.py  seed_data.py
backend/services/: __init__.py  balance_service.py  settlement_service.py
docs/: CODE-REVIEW-2-composition-api-patterns-audit.md  CODE-REVIEW-3-component-structure-audit.md  CODE-REVIEW-5-reactivity-performance-audit.md
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.vue
scripts/: README_LINEAR.md  import_linear.py  import_linear_bank_import.py  import_linear_bulk_soft_delete.py  start_cursor_api.py
(+42 files in other folders)
